fix troubles with whitespaces

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@ p {
   flex-flow: column nowrap;
   margin-bottom: 1rem;
   font-family: "Roboto Light", sans-serif;
-  outline: none;
 }
 
 .speech-timestamp {
@@ -42,7 +41,7 @@ p {
   margin-top: 24px;
   word-wrap: break-word;
   word-break: break-word;
-  white-space: break-spaces;
+  outline: none;
 }
 
 .speech-word {
